--- a/LWC Components from Learnings/force-app/main/default/classes/AccountController.cls
+++ b/LWC Components from Learnings/force-app/main/default/classes/AccountController.cls
@@ -6,6 +6,13 @@ public with sharing class AccountController {
 
     @AuraEnabled(cacheable=true)
     public static List<Account> filterAccountTypeType(String type){
-        return [SELECT Id, Name, Type, Industry from Account where Type =:type LIMIT 5];
+        return [SELECT Id, Name, Type from Account where Type=:type LIMIT 5];
     }
+
+    @AuraEnabled(cacheable=true)
+    public static List<Account> findAccounts(String searchKey){
+        String key = '%' + searchKey + '%';
+        return [SELECT Id, Name, Type, Industry FROM Account WHERE Name LIKE :key LIMIT 5];
+    }
+
 }
